@@ -54,6 +54,8 @@ v4.2.13 (work-in-progress)
        while ignoring the parts of the beam missing the geometry.
      * It is now possible to disable absorption during MiniMC simulations, by
        setting absorption=0 in the enginecfg strings.
+     * More consistent and useful serialisation of MiniMC source and geometry
+       objects.
      * ...
 
 v4.2.12 2026-01-05
